Accept business properties in attributes on POST, but return as properties on GET
